--- a/MyLittleRimPony/Source/MLRP_Assemblies.csproj
+++ b/MyLittleRimPony/Source/MLRP_Assemblies.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MLRP_Biotech.cs" />
     <Compile Include="MLRP_ResearchNotifications.cs" />
     <Compile Include="MyLittleRimPony.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
